<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="best.pair.tastebuddy.Searcher">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <!--Put form controls here-->
            <TextView
                android:id="@+id/TextViewDish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searcherTitle"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/EditTextQueryTerm"
                android:layout_height="wrap_content"
                android:hint="@string/EditTextQueryTermText"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                >
            </EditText>
            <Spinner
                android:id="@+id/SpinnerDistance"
                android:layout_height="wrap_content"
                android:prompt="@string/distanceChooserText"
                android:layout_width="fill_parent"
                >
            </Spinner>
            <CheckBox
                android:id="@+id/CheckBoxSpam"
                android:layout_height="wrap_content"
                android:text="@string/spamCheckboxText"
                android:checked="true"
                android:enabled="false"
                android:layout_width="fill_parent">
            </CheckBox>
            <Button
                android:id="@+id/ButtonSendFeedback"
                android:layout_height="wrap_content"
                android:text="@string/searchButtonText"
                android:onClick="searchQuery"
                android:layout_width="fill_parent">
            </Button>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/content_searcher" />

</android.support.design.widget.CoordinatorLayout>
